<resources>
    <string name="app_name">Events</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="text_view_credits_text">Credits</string>
    <string name="name_baudo">Paula Veronica Baudo</string>
    <string name="mail_baudo">paula.baudo@globant.com</string>
    <string name="name_burgos">David Alejandro Burgos Rodas</string>
    <string name="mail_burgos">david.burgos@globant.com</string>
    <string name="name_cattaneo">Ariel Cattáneo</string>
    <string name="mail_cattaneo">ariel.cattaneo@globant.com</string>
    <string name="name_cavallo">Micaela Sofía Cavallo</string>
    <string name="mail_cavallo">micaela.cavallo@globant.com</string>
    <string name="name_gonzalez">Juan Cruz Gonzalez Soler</string>
    <string name="mail_gonzalez">juan.soler@globant.com</string>
    <string name="name_gugliotta">Agustin Gugliotta</string>
    <string name="mail_gugliotta">agustin.gugliotta@globant.com</string>
    <string name="name_lodi">Gonzalo Lodi</string>
    <string name="mail_lodi">gonzalo.lodi@globant.com</string>
    <string name="name_madina">Agustin Madina</string>
    <string name="mail_madina">agustin.madina@globant.com</string>
    <string name="name_pena">Fernando Peña</string>
    <string name="mail_pena">fernando.pena@globant.com</string>
    <string name="name_ramirez">Juan Guillermo Ramírez Chica</string>
    <string name="mail_ramirez">juan.ramirez@globant.com</string>
    <string name="we_are_ready">We are ready!</string>
</resources>
